// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<Memo()
  id="tooltip"
  title="Sample"
>
  <WithStyles(ForwardRef(Fab))
    className="makeStyles-fab-1"
    color="primary"
    onClick={[MockFunction]}
  >
    <AccessAlarmIcon />
  </WithStyles(ForwardRef(Fab))>
</Memo()>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Memo()
  title="Sample"
>
  <WithStyles(ForwardRef(Fab))
    className="makeStyles-fab-1"
    color="primary"
    onClick={[MockFunction]}
  >
    <AccessAlarmIcon />
  </WithStyles(ForwardRef(Fab))>
</Memo()>
`;
